# my_mlir_learning_journey

./: mlir_1_installation.md  mlir_2_hello_world.md  mlir_2_mlir_hello_world.md  mlir_3_modul_by_Cpp.md  mlir_4_modul_Cpp_JIT.md  mlir_5_scf_if.md  mlir_6_scf_for.md  readme.md
2_hello/: main.c  run.sh  sample_llvm.ll
2_hello_world/: run.py
3_modul_by_Cpp/: mlir.cpp  run.sh
4_mlir_cpp_JIT/: mlir.cpp
5_mlir_scf_if/: CMakeLists.txt  run_mlir_module.py
6_mlir_scf_for/: run_mlir_module.py
6_mlir_scf_for/include/: mlir_helper.cpp
mlir_2_hello_world/: sample_c.c
mlir_3_modul_by_Cpp/: CMakeLists.txt  mlir.cpp
mlir_4_cpp_JIT/: CMakeLists.txt  run.sh
mlir_5_scf_if/: mlir.cpp  run_mlir_module.py
mlir_5_scf_if/include/: mlir_helper.cpp  my_library.h
mlir_6_scf_for/: mlir.cpp  run_mlir_module.py
mlir_6_scf_for/include/: my_library.h
mlir_7_cf-1_if/: run.sh
mlir_7_cf-1_if/include/: my_library.h
mlir_7_scf-1_if/: mlir.cpp
